feat: improve overall UI

--- a/client/src/lang/resources/id.json
+++ b/client/src/lang/resources/id.json
@@ -1,37 +1,65 @@
 {
   "Email": "Email",
   "Password": "Password",
+  "Name": "Nama",
+  "Description": "Deskripsi",
+  "Address": "Alamat",
+  "Phone Number": "Nomor Telepon",
+  "Back": "Kembali",
+  "Retry": "Coba lagi",
+  "Back to Home": "Ke halaman utama",
   "Logout": "Logout",
   "Login": "Login",
   "Profile": "Profile",
   "Welcome to POS": "Selamat datang di POS Toko Dinamis",
-  "Point Of Sale": "Point Of Sale",
-  "Point Of Sales": "Point Of Sales",
+  "Hello!": "Halo {{name}}",
+  "Point of Sales": "Point of Sales",
+  "Total Sales": "Total Penjualan",
+  "Total Expenses": "Total Pengeluaran",
+  "Total Customers": "Total Pelanggan",
   "Features": "Fitur",
   "Sale": "Penjualan",
   "Sales": "Penjualan",
   "Customer": "Pelanggan",
   "Customers": "Pelanggan",
-  "Create Customer": "Tambah Data Pelanggan",
+  "Create Customer": "Tambah Pelanggan",
   "Edit Customer": "Ubah Data Pelanggan",
-  "Delete Customer": "Hapus Data Pelanggan",
+  "Delete Customer": "Hapus Pelanggan",
+  "Customer created successfully": "Pelanggan berhasil ditambahkan",
+  "Customer updated successfully": "Data pelanggan berhasil diubah",
+  "Customer deleted successfully": "Pelanggan berhasil dihapus",
   "Supplier": "Supplier",
   "Suppliers": "Supplier",
   "Create Supplier": "Tambah Supplier",
   "Edit Supplier": "Ubah Data Supplier",
   "Delete Supplier": "Hapus Supplier",
+  "Supplier created successfully": "Supplier berhasil ditambahkan",
+  "Supplier updated successfully": "Data supplier berhasil diubah",
+  "Supplier deleted successfully": "Supplier berhasil dihapus",
   "Product": "Produk",
   "Products": "Produk",
   "Create Product": "Tambah Produk",
   "Edit Product": "Ubah Data Produk",
   "Delete Product": "Hapus Produk",
+  "Product created successfully": "Produk berhasil ditambahkan",
+  "Product updated successfully": "Data produk berhasil diubah",
+  "Product deleted successfully": "Produk berhasil dihapus",
   "Category": "Kategori",
   "Categories": "Kategori",
   "Create Category": "Tambah Kategori",
   "Edit Category": "Ubah Data Kategori",
   "Delete Category": "Hapus Kategori",
+  "Category created successfully": "Kategori berhasil ditambahkan",
+  "Category updated successfully": "Data kategori berhasil diubah",
+  "Category deleted successfully": "Kategori berhasil dihapus",
   "Expense": "Pengeluaran",
   "Expenses": "Pengeluaran",
+  "Create Expense": "Tambah Pengeluaran",
+  "Edit Expense": "Ubah Data Pengeluaran",
+  "Delete Expense": "Hapus Pengeluaran",
+  "Expense created successfully": "Pengeluaran berhasil ditambahkan",
+  "Expense updated successfully": "Data pengeluaran berhasil diubah",
+  "Expense deleted successfully": "Pengeluaran berhasil dihapus",
   "Report": "Laporan",
   "Reports": "Laporan",
   "Todays Sales": "Penjualan Hari Ini"
