feat(client): improve lang

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -1,25 +1,34 @@
 {
   "Actions": "Aksi",
+  "Address": "Alamat",
+  "Author": "Author",
   "categories": "kategori",
   "Categories": "Kategori",
   "Category": "Kategori",
+  "Created At": "Tanggal Ditambahkan",
+  "Created By": "Dibuat oleh",
   "customer": "pelanggan",
   "Customer": "Pelanggan",
   "customers": "pelanggan",
   "Customers": "Pelanggan",
-  "Data created successfully": "{{model, sentencecase, default(value: Data)}} berhasil ditambahkan",
-  "Data deleted successfully": "{{model, sentencecase, default(value: Data)}} berhasil dihapus",
-  "Data updated successfully": "Data{{model, spaceBeforeWhenDefined}} berhasil diubah",
+  "Description": "Deskripsi",
+  "Email": "Email",
   "Expense": "Pengeluaran",
   "expenses": "pengeluaran",
   "Expenses": "Pengeluaran",
   "Features": "Fitur",
-  "Hello!": "Halo {{name}}",
+  "Female": "Perempuan",
+  "Gender": "Jenis Kelamin",
+  "Male": "Laki-Laki",
+  "Name": "Nama",
+  "Password": "Password",
+  "Phone Number": "Nomor Telepon",
   "Point of Sales": "Point of Sales",
   "Product": "Produk",
   "products": "produk",
   "Products": "Produk",
   "Profile": "Profil",
+  "Purchased Amount": "Total Pembelian",
   "Report": "Laporan",
   "reports": "laporan",
   "Reports": "Laporan",
@@ -32,5 +41,5 @@
   "Total Customers": "Total Pelanggan",
   "Total Expenses": "Total Pengeluaran",
   "Total Sales": "Total Penjualan",
-  "Welcome to POS": "Selamat datang di POS Toko Dinamis"
+  "Updated At": "Tanggal Diubah"
 }
