feat: add supplier menu and lazy load components

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -35,6 +35,7 @@
   "Sale": "Penjualan",
   "Sales": "Penjualan",
   "Supplier": "Supplier",
+  "supplier": "supplier",
   "suppliers": "supplier",
   "Suppliers": "Supplier",
   "Todays Sales": "Penjualan Hari Ini",
