--- a/client/src/services/lang/resources/id_action.json
+++ b/client/src/services/lang/resources/id_action.json
@@ -6,9 +6,9 @@
   "Back to Home": "Ke halaman utama",
   "Logout": "Logout",
   "Login": "Login",
-  "Create Data": "Tambah{{model, default(value: Data), sentencecase, spaceBeforeWhenDefined}}",
-  "Edit Data": "Ubah Data{{model, sentencecase, spaceBeforeWhenDefined}}",
-  "Delete Data": "Hapus{{model, default(value: Data), sentencecase, spaceBeforeWhenDefined}}",
+  "Create Data": "Tambah{{model, default(value: Data), sentencecase, spaceBeforeIfDefined}}",
+  "Edit Data": "Ubah Data{{model, sentencecase, spaceBeforeIfDefined, removeIfUndefined}}",
+  "Delete Data": "Hapus{{model, default(value: Data), sentencecase, spaceBeforeIfDefined}}",
   "Create Customer": "$t(Create Data, {\"model\":\"pelanggan\"})",
   "Edit Customer": "$t(Edit Data, {\"model\":\"pelanggan\"})",
   "Delete Customer": "$t(Delete Data, {\"model\":\"pelanggan\"})",
