feat: integrate categories and units API

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -4,6 +4,7 @@
   "Author": "Author",
   "categories": "kategori",
   "Categories": "Kategori",
+  "category": "kategori",
   "Category": "Kategori",
   "Created At": "Tanggal Ditambahkan",
   "Created By": "Dibuat oleh",
@@ -38,6 +39,10 @@
   "supplier": "supplier",
   "suppliers": "supplier",
   "Suppliers": "Supplier",
+  "unit": "satuan",
+  "Unit": "Satuan",
+  "units": "satuan",
+  "Units": "Satuan",
   "Todays Sales": "Penjualan Hari Ini",
   "Total Customers": "Total Pelanggan",
   "Total Expenses": "Total Pengeluaran",
