--- a/client/src/services/lang/resources/id_action.json
+++ b/client/src/services/lang/resources/id_action.json
@@ -15,6 +15,12 @@
   "Create Supplier": "Tambah Supplier",
   "Edit Supplier": "Ubah Data Supplier",
   "Delete Supplier": "Hapus Supplier",
+  "Create Category": "Tambah Kategori",
+  "Edit Category": "Ubah Data Kategori",
+  "Delete Category": "Hapus Kategori",
+  "Create Unit": "Tambah Satuan",
+  "Edit Unit": "Ubah Data Satuan",
+  "Delete Unit": "Hapus Satuan",
   "Create Product": "Tambah Produk",
   "Edit Product": "Ubah Data Produk",
   "Delete Product": "Hapus Produk"
