feat: remove unnecessary response fields in the API

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -56,7 +56,7 @@
   "Supplier": "Supplier",
   "suppliers": "supplier",
   "Suppliers": "Supplier",
-  "Todays Sales": "Penjualan Hari Ini",
+  "Today Sales": "Penjualan Hari Ini",
   "Total Customers": "Total Pelanggan",
   "Total Expenses": "Total Pengeluaran",
   "Total Sales": "Total Penjualan",
