feat: finish procurement module

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -1,10 +1,12 @@
 {
+  "Num": "No",
   "Actions": "Aksi",
   "Address": "Alamat",
   "Author": "Author",
   "Available Quantity": "Kuantitas yang Tersedia",
   "Barcode": "Barcode",
   "Barcode Type": "Tipe Barcode",
+  "Buying Price": "Harga Beli",
   "categories": "kategori",
   "Categories": "Kategori",
   "category": "kategori",
@@ -16,11 +18,9 @@
   "Customer": "Pelanggan",
   "customers": "pelanggan",
   "Customers": "Pelanggan",
-  "DELIVERED": "Terkirim",
-  "Delivery Status": "Status Pengiriman",
+  "Delivered": "Terkirim",
   "Delivered At": "Tanggal Terkirim",
-  "Payment Status": "Status Pembayaran",
-  "Payed At": "Tanggal Terbayar",
+  "Delivery Status": "Status Pengiriman",
   "Description": "Deskripsi",
   "Email": "Email",
   "Expense": "Pengeluaran",
@@ -29,16 +29,27 @@
   "Features": "Fitur",
   "Female": "Perempuan",
   "Gender": "Jenis Kelamin",
+  "Invoice Date": "Tanggal Faktur",
+  "Invoice Number": "Nomor Faktur",
+  "Quantity": "Kuantitas",
   "Male": "Laki-Laki",
   "Name": "Nama",
-  "PAID": "Terbayar",
+  "Paid": "Terbayar",
   "Password": "Password",
+  "Payed At": "Tanggal Terbayar",
+  "Payment Status": "Status Pembayaran",
+  "Pending": "Tertunda",
   "PENDING": "Tertunda",
   "Phone Number": "Nomor Telepon",
   "Point of Sales": "Point of Sales",
   "Price": "Harga",
   "procurement": "pengadaan",
   "Procurement": "Pengadaan",
+  "procurement product": "pengadaan produk",
+  "Procurement Product": "Pengadaan Produk",
+  "procurement products": "pengadaan produk",
+  "Procurement Products": "Pengadaan Produk",
+  "procurement-products": "pengadaan produk",
   "procurements": "pengadaan",
   "Procurements": "Pengadaan",
   "product": "produk",
@@ -59,8 +70,11 @@
   "Sale": "Penjualan",
   "sales": "penjualan",
   "Sales": "Penjualan",
+  "Selling Price": "Harga Jual",
   "supplier": "supplier",
   "Supplier": "Supplier",
+  "Product Name": "Nama Produk",
+  "Supplier Name": "Nama Supplier",
   "suppliers": "supplier",
   "Suppliers": "Supplier",
   "Today Sales": "Penjualan Hari Ini",
@@ -72,6 +86,7 @@
   "Unit Name": "Nama Unit",
   "units": "unit",
   "Units": "Unit",
+  "Unpaid": "Belum Terbayar",
   "UNPAID": "Belum Terbayar",
   "Updated At": "Tanggal Diubah"
 }
