feat: on revamp sales section

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -43,6 +43,7 @@
   "Phone Number": "Nomor Telepon",
   "Point of Sales": "Point of Sales",
   "Price": "Harga",
+  "Total": "Total",
   "procurement": "pengadaan",
   "Procurement": "Pengadaan",
   "procurement product": "pengadaan produk",
