--- a/client/src/services/lang/resources/id_message.json
+++ b/client/src/services/lang/resources/id_message.json
@@ -7,5 +7,6 @@
   "Hello!": "Halo {{name}}",
   "Welcome to POS": "Selamat datang di POS Toko Dinamis",
   "Define the selling price": "Tentukan harga jual",
-  "Deleting this product unit will remove the related procured stock. Do you want to proceed?": "Menghapus unit produk ini akan menghapus pengadaan stok terkait. Apakah Anda ingin melanjutkan?"
+  "Deleting this product unit will remove the related procured stock. Do you want to proceed?": "Menghapus unit produk ini akan menghapus pengadaan stok terkait. Apakah Anda ingin melanjutkan?",
+  "No records found": "Tidak ada data yang ditemukan"
 }
