feat: on progress sale section

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -1,9 +1,9 @@
 {
-  "Num": "No",
   "Actions": "Aksi",
   "Address": "Alamat",
   "Author": "Author",
   "Available Quantity": "Kuantitas yang Tersedia",
+  "Available Units": "Unit yang Tersedia",
   "Barcode": "Barcode",
   "Barcode Type": "Tipe Barcode",
   "Buying Price": "Harga Beli",
@@ -31,9 +31,9 @@
   "Gender": "Jenis Kelamin",
   "Invoice Date": "Tanggal Faktur",
   "Invoice Number": "Nomor Faktur",
-  "Quantity": "Kuantitas",
   "Male": "Laki-Laki",
   "Name": "Nama",
+  "Num": "No",
   "Paid": "Terbayar",
   "Password": "Password",
   "Payed At": "Tanggal Terbayar",
@@ -42,8 +42,8 @@
   "PENDING": "Tertunda",
   "Phone Number": "Nomor Telepon",
   "Point of Sales": "Point of Sales",
+  "POS": "POS",
   "Price": "Harga",
-  "Total": "Total",
   "procurement": "pengadaan",
   "Procurement": "Pengadaan",
   "procurement product": "pengadaan produk",
@@ -55,6 +55,7 @@
   "Procurements": "Pengadaan",
   "product": "produk",
   "Product": "Produk",
+  "Product Name": "Nama Produk",
   "product unit": "unit produk",
   "Product Unit": "Unit Produk",
   "product units": "unit produk",
@@ -64,6 +65,7 @@
   "Products": "Produk",
   "Profile": "Profil",
   "Purchased Amount": "Total Pembelian",
+  "Quantity": "Kuantitas",
   "Report": "Laporan",
   "reports": "laporan",
   "Reports": "Laporan",
@@ -74,11 +76,11 @@
   "Selling Price": "Harga Jual",
   "supplier": "supplier",
   "Supplier": "Supplier",
-  "Product Name": "Nama Produk",
   "Supplier Name": "Nama Supplier",
   "suppliers": "supplier",
   "Suppliers": "Supplier",
   "Today Sales": "Penjualan Hari Ini",
+  "Total": "Total",
   "Total Customers": "Total Pelanggan",
   "Total Expenses": "Total Pengeluaran",
   "Total Sales": "Total Penjualan",
