feat: complete sale section

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -52,7 +52,11 @@
   "Procurement Products": "Pengadaan Produk",
   "procurement-products": "pengadaan produk",
   "procurements": "pengadaan",
+  "Subtotal": "Subtotal",
+  "Discount": "Diskon",
+  "Discount Total": "Total Diskon",
   "Procurements": "Pengadaan",
+  "Change": "Kembalian",
   "product": "produk",
   "Product": "Produk",
   "Product Name": "Nama Produk",
