feat: improve sale section interactiveness

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -12,16 +12,21 @@
   "category": "kategori",
   "Category": "Kategori",
   "Category Name": "Nama Kategori",
+  "Change": "Kembalian",
   "Created At": "Tanggal Ditambahkan",
   "Created By": "Ditambahkan oleh",
   "customer": "pelanggan",
+  "Sale Price": "Harga Jual",
   "Customer": "Pelanggan",
+  "Customer Name": "Nama Pelanggan",
   "customers": "pelanggan",
   "Customers": "Pelanggan",
   "Delivered": "Terkirim",
   "Delivered At": "Tanggal Terkirim",
   "Delivery Status": "Status Pengiriman",
   "Description": "Deskripsi",
+  "Discount": "Diskon",
+  "Discount Total": "Total Diskon",
   "Email": "Email",
   "Expense": "Pengeluaran",
   "expenses": "pengeluaran",
@@ -32,6 +37,7 @@
   "Invoice Date": "Tanggal Faktur",
   "Invoice Number": "Nomor Faktur",
   "Male": "Laki-Laki",
+  "Monthly Sales": "Penjualan Bulanan",
   "Name": "Nama",
   "Num": "No",
   "Paid": "Terbayar",
@@ -52,11 +58,7 @@
   "Procurement Products": "Pengadaan Produk",
   "procurement-products": "pengadaan produk",
   "procurements": "pengadaan",
-  "Subtotal": "Subtotal",
-  "Discount": "Diskon",
-  "Discount Total": "Total Diskon",
   "Procurements": "Pengadaan",
-  "Change": "Kembalian",
   "product": "produk",
   "Product": "Produk",
   "Product Name": "Nama Produk",
@@ -68,8 +70,11 @@
   "products": "produk",
   "Products": "Produk",
   "Profile": "Profil",
+  "Profit": "Pendapatan",
+  "Profit Loss": "Laba Rugi",
   "Purchased Amount": "Total Pembelian",
   "Quantity": "Kuantitas",
+  "Recent Orders": "Pesanan Terbaru",
   "Report": "Laporan",
   "reports": "laporan",
   "Reports": "Laporan",
@@ -78,15 +83,18 @@
   "sales": "penjualan",
   "Sales": "Penjualan",
   "Selling Price": "Harga Jual",
+  "Subtotal": "Subtotal",
   "supplier": "supplier",
   "Supplier": "Supplier",
   "Supplier Name": "Nama Supplier",
   "suppliers": "supplier",
   "Suppliers": "Supplier",
   "Today Sales": "Penjualan Hari Ini",
+  "Top Customers": "Pelanggan Teratas",
   "Total": "Total",
   "Total Customers": "Total Pelanggan",
   "Total Expenses": "Total Pengeluaran",
+  "Total Profit": "Total Pendapatan",
   "Total Sales": "Total Penjualan",
   "unit": "unit",
   "Unit": "Unit",
@@ -95,5 +103,6 @@
   "Units": "Unit",
   "Unpaid": "Belum Terbayar",
   "UNPAID": "Belum Terbayar",
-  "Updated At": "Tanggal Diubah"
+  "Updated At": "Tanggal Diubah",
+  "Yearly Sales": "Penjualan Tahunan"
 }
