--- a/client/src/services/lang/resources/id_action.json
+++ b/client/src/services/lang/resources/id_action.json
@@ -39,5 +39,6 @@
   "Delete Procurement": "Hapus Pengadaan",
   "Delete Procurement Product": "Hapus Pengadaan Produk",
   "Add Procurement Product": "Tambah Pengadaan Produk",
-  "Add Product": "Tambah Produk"
+  "Add Product": "Tambah Produk",
+  "Confirm Transaction Data": "Konfirmasi Data Transaksi"
 }
