feat: implement daily, monthly, yearly sales report

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -16,11 +16,12 @@
   "Created At": "Tanggal Ditambahkan",
   "Created By": "Ditambahkan oleh",
   "customer": "pelanggan",
-  "Sale Price": "Harga Jual",
   "Customer": "Pelanggan",
   "Customer Name": "Nama Pelanggan",
   "customers": "pelanggan",
   "Customers": "Pelanggan",
+  "Daily Sales": "Penjualan Harian",
+  "Daily Sales Report": "Laporan Penjualan Harian",
   "Delivered": "Terkirim",
   "Delivered At": "Tanggal Terkirim",
   "Delivery Status": "Status Pengiriman",
@@ -38,6 +39,7 @@
   "Invoice Number": "Nomor Faktur",
   "Male": "Laki-Laki",
   "Monthly Sales": "Penjualan Bulanan",
+  "Monthly Sales Report": "Laporan Penjualan Bulanan",
   "Name": "Nama",
   "Num": "No",
   "Paid": "Terbayar",
@@ -80,8 +82,10 @@
   "Reports": "Laporan",
   "sale": "penjualan",
   "Sale": "Penjualan",
+  "Sale Price": "Harga Jual",
   "sales": "penjualan",
   "Sales": "Penjualan",
+  "Sold At": "Tanggal Terjual",
   "Selling Price": "Harga Jual",
   "Subtotal": "Subtotal",
   "supplier": "supplier",
@@ -89,7 +93,6 @@
   "Supplier Name": "Nama Supplier",
   "suppliers": "supplier",
   "Suppliers": "Supplier",
-  "Today Sales": "Penjualan Hari Ini",
   "Top Customers": "Pelanggan Teratas",
   "Total": "Total",
   "Total Customers": "Total Pelanggan",
@@ -104,5 +107,6 @@
   "Unpaid": "Belum Terbayar",
   "UNPAID": "Belum Terbayar",
   "Updated At": "Tanggal Diubah",
-  "Yearly Sales": "Penjualan Tahunan"
+  "Yearly Sales": "Penjualan Tahunan",
+  "Yearly Sales Report": "Laporan Penjualan Tahunan"
 }
