feat(client): material ui v5 migration

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -86,6 +86,7 @@
   "sales": "penjualan",
   "Sales": "Penjualan",
   "Sold At": "Tanggal Terjual",
+  "Profit Loss Report": "Laporan Laba Rugi",
   "Selling Price": "Harga Jual",
   "Subtotal": "Subtotal",
   "supplier": "supplier",
