feat: complete sales report

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -87,6 +87,8 @@
   "Sales": "Penjualan",
   "Sold At": "Tanggal Terjual",
   "Profit Loss Report": "Laporan Laba Rugi",
+  "From": "Dari",
+  "To": "Hingga",
   "Selling Price": "Harga Jual",
   "Subtotal": "Subtotal",
   "supplier": "supplier",
@@ -98,6 +100,7 @@
   "Total": "Total",
   "Total Customers": "Total Pelanggan",
   "Total Expenses": "Total Pengeluaran",
+  "Sales Report": "Laporan Penjualan",
   "Total Profit": "Total Pendapatan",
   "Total Sales": "Total Penjualan",
   "unit": "unit",
