--- a/client/src/services/lang/resources/id_action.json
+++ b/client/src/services/lang/resources/id_action.json
@@ -3,6 +3,8 @@
   "Add": "Tambah",
   "Save": "Simpan",
   "Submit": "Kirim",
+  "Search": "Cari",
+  "Print": "Cetak",
   "Cancel": "Batal",
   "Back": "Kembali",
   "Reload": "Muat ulang",
