feat: improve profit loss report and fix sales section (some fields was not reacting to changes)

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -1,5 +1,8 @@
 {
   "Actions": "Aksi",
+  "Qty": "Qty",
+  "Order": "Pesanan",
+  "Order List": "Daftar Pesanan",
   "Address": "Alamat",
   "Author": "Author",
   "Available Quantity": "Kuantitas yang Tersedia",
@@ -10,9 +13,11 @@
   "categories": "kategori",
   "Categories": "Kategori",
   "category": "kategori",
+  "Order Name": "Nama Pesanan",
   "Category": "Kategori",
   "Category Name": "Nama Kategori",
   "Change": "Kembalian",
+  "Cost Price": "Harga Pokok",
   "Created At": "Tanggal Ditambahkan",
   "Created By": "Ditambahkan oleh",
   "customer": "pelanggan",
@@ -34,6 +39,7 @@
   "Expenses": "Pengeluaran",
   "Features": "Fitur",
   "Female": "Perempuan",
+  "From": "Dari",
   "Gender": "Jenis Kelamin",
   "Invoice Date": "Tanggal Faktur",
   "Invoice Number": "Nomor Faktur",
@@ -72,8 +78,9 @@
   "products": "produk",
   "Products": "Produk",
   "Profile": "Profil",
-  "Profit": "Pendapatan",
+  "Profit": "Keuntungan",
   "Profit Loss": "Laba Rugi",
+  "Profit Loss Report": "Laporan Laba Rugi",
   "Purchased Amount": "Total Pembelian",
   "Quantity": "Kuantitas",
   "Recent Orders": "Pesanan Terbaru",
@@ -85,23 +92,21 @@
   "Sale Price": "Harga Jual",
   "sales": "penjualan",
   "Sales": "Penjualan",
-  "Sold At": "Tanggal Terjual",
-  "Profit Loss Report": "Laporan Laba Rugi",
-  "From": "Dari",
-  "To": "Hingga",
+  "Sales Report": "Laporan Penjualan",
   "Selling Price": "Harga Jual",
+  "Sold At": "Tanggal Terjual",
   "Subtotal": "Subtotal",
   "supplier": "supplier",
   "Supplier": "Supplier",
   "Supplier Name": "Nama Supplier",
   "suppliers": "supplier",
   "Suppliers": "Supplier",
+  "To": "Hingga",
   "Top Customers": "Pelanggan Teratas",
   "Total": "Total",
   "Total Customers": "Total Pelanggan",
   "Total Expenses": "Total Pengeluaran",
-  "Sales Report": "Laporan Penjualan",
-  "Total Profit": "Total Pendapatan",
+  "Total Profit": "Total Keuntungan",
   "Total Sales": "Total Penjualan",
   "unit": "unit",
   "Unit": "Unit",
@@ -112,5 +117,6 @@
   "UNPAID": "Belum Terbayar",
   "Updated At": "Tanggal Diubah",
   "Yearly Sales": "Penjualan Tahunan",
-  "Yearly Sales Report": "Laporan Penjualan Tahunan"
+  "Yearly Sales Report": "Laporan Penjualan Tahunan",
+  "Date": "Tanggal"
 }
