--- a/client/src/services/lang/resources/id_validation.json
+++ b/client/src/services/lang/resources/id_validation.json
@@ -1,20 +1,20 @@
 {
-  "default": "{{label, spaceAfterIfDefined}}tidak valid",
-  "required": "{{label, spaceAfterIfDefined}}harus diisi",
+  "default": "{{label, spaceAfterIfDefined, removeIfUndefined}}tidak valid",
+  "required": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus diisi",
   "string": {
-    "email": "{{label, spaceAfterIfDefined}}harus berupa email yang valid",
-    "min": "{{label, spaceAfterIfDefined}}harus lebih besar atau sama dengan {{x}} jumlah karakter",
-    "max": "{{label, spaceAfterIfDefined}}harus lebih kecil atau sama dengan {{x}} jumlah karakter"
+    "email": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus berupa email yang valid",
+    "min": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih besar atau sama dengan {{x}} jumlah karakter",
+    "max": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih kecil atau sama dengan {{x}} jumlah karakter"
   },
-  "must be number": "{{label, spaceAfterIfDefined}}harus berupa angka",
+  "must be number": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus berupa angka",
   "number": {
-    "min": "{{label, spaceAfterIfDefined}}harus lebih besar atau sama dengan {{x}}",
-    "max": "{{label, spaceAfterIfDefined}}harus lebih kecil atau sama dengan {{x}}",
-    "lessThan": "{{label, spaceAfterIfDefined}}harus lebih kecil dari {{x}}",
-    "moreThan": "{{label, spaceAfterIfDefined}}harus lebih besar dari {{x}}"
+    "min": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih besar atau sama dengan {{x}}",
+    "max": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih kecil atau sama dengan {{x}}",
+    "lessThan": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih kecil dari {{x}}",
+    "moreThan": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih besar dari {{x}}"
   },
   "array": {
-    "unique": "{{field, spaceAfterIfDefined}}harus berupa data yang unik"
+    "unique": "{{field, spaceAfterIfDefined, removeIfUndefined}}harus berupa data yang unik"
   },
   "some fields are invalid": "ada beberapa kolom yang tidak valid",
   "The inputted quantity should not exceed the product unit available quantity": "Kuantitas yang diinputkan tidak boleh melebihi kuantitas unit produk yang tersedia",
