--- a/client/src/services/lang/resources/id_action.json
+++ b/client/src/services/lang/resources/id_action.json
@@ -42,5 +42,6 @@
   "Delete Procurement Product": "Hapus Pengadaan Produk",
   "Add Procurement Product": "Tambah Pengadaan Produk",
   "Add Product": "Tambah Produk",
-  "Confirm Transaction Data": "Konfirmasi Data Transaksi"
+  "Confirm Transaction Data": "Konfirmasi Data Transaksi",
+  "Delete Sale": "Hapus Pesanan"
 }
