fix: procurement module, UI issue, dialog issue, terms, database query filters

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -11,7 +11,7 @@
   "Barcode": "Barcode",
   "Barcode Type": "Tipe Barcode",
   "Buying Price": "Harga Beli",
-  "Order Invoice": "Faktur Pesanan",
+  "Order Receipt": "Struk Pesanan",
   "categories": "kategori",
   "Categories": "Kategori",
   "category": "kategori",
@@ -43,8 +43,8 @@
   "Female": "Perempuan",
   "From": "Dari",
   "Gender": "Jenis Kelamin",
-  "Invoice Date": "Tanggal Faktur",
-  "Invoice Number": "Nomor Faktur",
+  "Invoice Date": "Tanggal Invoice",
+  "Invoice Number": "Nomor Invoice",
   "Male": "Laki-Laki",
   "Monthly Sales": "Penjualan Bulanan",
   "Monthly Sales Report": "Laporan Penjualan Bulanan",
