feat: fix terms and finish receipt

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -1,9 +1,5 @@
 {
   "Actions": "Aksi",
-  "Qty": "Qty",
-  "order": "pesanan",
-  "Order": "Pesanan",
-  "Order List": "Daftar Pesanan",
   "Address": "Alamat",
   "Author": "Author",
   "Available Quantity": "Kuantitas yang Tersedia",
@@ -11,11 +7,11 @@
   "Barcode": "Barcode",
   "Barcode Type": "Tipe Barcode",
   "Buying Price": "Harga Beli",
-  "Order Receipt": "Struk Pesanan",
+  "Cash": "Tunai",
+  "Cashier": "Kasir",
   "categories": "kategori",
   "Categories": "Kategori",
   "category": "kategori",
-  "Order Name": "Nama Pesanan",
   "Category": "Kategori",
   "Category Name": "Nama Kategori",
   "Change": "Kembalian",
@@ -29,12 +25,13 @@
   "Customers": "Pelanggan",
   "Daily Sales": "Penjualan Harian",
   "Daily Sales Report": "Laporan Penjualan Harian",
+  "Date": "Tanggal",
   "Delivered": "Terkirim",
   "Delivered At": "Tanggal Terkirim",
   "Delivery Status": "Status Pengiriman",
   "Description": "Deskripsi",
   "Discount": "Diskon",
-  "Discount Total": "Total Diskon",
+  "Discount on Total": "Diskon Akhir",
   "Email": "Email",
   "Expense": "Pengeluaran",
   "expenses": "pengeluaran",
@@ -50,6 +47,11 @@
   "Monthly Sales Report": "Laporan Penjualan Bulanan",
   "Name": "Nama",
   "Num": "No",
+  "order": "pesanan",
+  "Order": "Pesanan",
+  "Order List": "Daftar Pesanan",
+  "Order Name": "Nama Pesanan",
+  "Order Receipt": "Struk Pesanan",
   "Paid": "Terbayar",
   "Password": "Password",
   "Payed At": "Tanggal Terbayar",
@@ -84,6 +86,7 @@
   "Profit Loss": "Laba Rugi",
   "Profit Loss Report": "Laporan Laba Rugi",
   "Purchased Amount": "Total Pembelian",
+  "Qty": "Qty",
   "Quantity": "Kuantitas",
   "Recent Orders": "Pesanan Terbaru",
   "Report": "Laporan",
@@ -103,12 +106,14 @@
   "Supplier Name": "Nama Supplier",
   "suppliers": "supplier",
   "Suppliers": "Supplier",
+  "Thank You": "Terima Kasih",
   "To": "Hingga",
   "Top Customers": "Pelanggan Teratas",
   "Total": "Total",
   "Total Customers": "Total Pelanggan",
   "Total Expenses": "Total Pengeluaran",
   "Total Profit": "Total Keuntungan",
+  "Total Qty": "Total Qty",
   "Total Sales": "Total Penjualan",
   "unit": "unit",
   "Unit": "Unit",
@@ -119,6 +124,5 @@
   "UNPAID": "Belum Terbayar",
   "Updated At": "Tanggal Diubah",
   "Yearly Sales": "Penjualan Tahunan",
-  "Yearly Sales Report": "Laporan Penjualan Tahunan",
-  "Date": "Tanggal"
+  "Yearly Sales Report": "Laporan Penjualan Tahunan"
 }
