--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -1,9 +1,10 @@
 {
   "Actions": "Aksi",
+  "Invoice": "Faktur",
   "Address": "Alamat",
   "Author": "Author",
   "Available Quantity": "Kuantitas yang Tersedia",
-  "Available Units": "Unit yang Tersedia",
+  "Available Units": "Satuan yang Tersedia",
   "Barcode": "Barcode",
   "Barcode Type": "Tipe Barcode",
   "Buying Price": "Harga Beli",
@@ -40,8 +41,8 @@
   "Female": "Perempuan",
   "From": "Dari",
   "Gender": "Jenis Kelamin",
-  "Invoice Date": "Tanggal Invoice",
-  "Invoice Number": "Nomor Invoice",
+  "Invoice Date": "Tanggal Faktur",
+  "Invoice Number": "Nomor Faktur",
   "Male": "Laki-Laki",
   "Monthly Sales": "Penjualan Bulanan",
   "Monthly Sales Report": "Laporan Penjualan Bulanan",
@@ -49,6 +50,7 @@
   "Num": "No",
   "order": "pesanan",
   "Order": "Pesanan",
+  "Best Regards": "Hormat Kami",
   "Order List": "Daftar Pesanan",
   "Order Name": "Nama Pesanan",
   "Order Receipt": "Struk Pesanan",
@@ -74,11 +76,11 @@
   "product": "produk",
   "Product": "Produk",
   "Product Name": "Nama Produk",
-  "product unit": "unit produk",
-  "Product Unit": "Unit Produk",
-  "product units": "unit produk",
-  "Product Units": "Unit Produk",
-  "product-units": "unit produk",
+  "product unit": "satuan produk",
+  "Product Unit": "Satuan Produk",
+  "product units": "satuan produk",
+  "Product Units": "Satuan Produk",
+  "product-units": "satuan produk",
   "products": "produk",
   "Products": "Produk",
   "Profile": "Profil",
@@ -115,11 +117,11 @@
   "Total Profit": "Total Keuntungan",
   "Total Qty": "Total Qty",
   "Total Sales": "Total Penjualan",
-  "unit": "unit",
-  "Unit": "Unit",
-  "Unit Name": "Nama Unit",
-  "units": "unit",
-  "Units": "Unit",
+  "unit": "satuan",
+  "Unit": "Satuan",
+  "Unit Name": "Nama Satuan",
+  "units": "satuan",
+  "Units": "Satuan",
   "Unpaid": "Belum Terbayar",
   "UNPAID": "Belum Terbayar",
   "Updated At": "Tanggal Diubah",
