--- a/client/src/services/lang/resources/id_validation.json
+++ b/client/src/services/lang/resources/id_validation.json
@@ -1,17 +1,17 @@
 {
-  "default": "{{label, spaceAfterIfDefined, removeIfUndefined}}tidak valid",
-  "required": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus diisi",
+  "default": "tidak valid",
+  "required": "harus diisi",
   "string": {
-    "email": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus berupa email yang valid",
-    "min": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih besar atau sama dengan {{x}} jumlah karakter",
-    "max": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih kecil atau sama dengan {{x}} jumlah karakter"
+    "email": "harus berupa email yang valid",
+    "min": "harus lebih besar atau sama dengan {{x}} jumlah karakter",
+    "max": "harus lebih kecil atau sama dengan {{x}} jumlah karakter"
   },
-  "must be number": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus berupa angka",
+  "must be number": "harus berupa angka",
   "number": {
-    "min": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih besar atau sama dengan {{x}}",
-    "max": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih kecil atau sama dengan {{x}}",
-    "lessThan": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih kecil dari {{x}}",
-    "moreThan": "{{label, spaceAfterIfDefined, removeIfUndefined}}harus lebih besar dari {{x}}"
+    "min": "harus lebih besar atau sama dengan {{x}}",
+    "max": "harus lebih kecil atau sama dengan {{x}}",
+    "lessThan": "harus lebih kecil dari {{x}}",
+    "moreThan": "harus lebih besar dari {{x}}"
   },
   "array": {
     "unique": "{{field, spaceAfterIfDefined, removeIfUndefined}}harus berupa data yang unik"
