fix: maybe the client Dockerfile is finally fixed

--- a/client/src/services/lang/resources/id_action.json
+++ b/client/src/services/lang/resources/id_action.json
@@ -8,7 +8,8 @@
   "Cancel": "Batal",
   "Back": "Kembali",
   "Reload": "Muat ulang",
-  "Back to Home": "Ke halaman utama",
+  "Back to Home": "Kembali ke Halaman Utama",
+  "Back to Login": "Kembali ke Halaman Login",
   "Logout": "Logout",
   "Login": "Login",
   "Create": "Tambah",
