feat(sales): implement web socket in order overview page for customer

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -31,7 +31,10 @@
   "Delivered At": "Tanggal Terkirim",
   "Delivery Status": "Status Pengiriman",
   "Description": "Deskripsi",
+  "Total Orders": "Total Pesanan",
+  "Procurement Total Cost": "Total Biaya Pengadaan",
   "Discount": "Diskon",
+  "Cashier Name": "Nama Kasir",
   "Discount on Total": "Diskon Akhir",
   "Email": "Email",
   "Expense": "Pengeluaran",
@@ -44,6 +47,7 @@
   "Invoice Date": "Tanggal Faktur",
   "Invoice Number": "Nomor Faktur",
   "Male": "Laki-Laki",
+  "Data": "Data",
   "Monthly Sales": "Penjualan Bulanan",
   "Monthly Sales Report": "Laporan Penjualan Bulanan",
   "Name": "Nama",
@@ -96,6 +100,7 @@
   "Reports": "Laporan",
   "sale": "penjualan",
   "Sale": "Penjualan",
+  "Customer Order View": "Tampilan Pesanan Pelanggan",
   "Sale Price": "Harga Jual",
   "sales": "penjualan",
   "Sales": "Penjualan",
