--- a/client/src/services/lang/resources/id_action.json
+++ b/client/src/services/lang/resources/id_action.json
@@ -10,6 +10,7 @@
   "Reload": "Muat ulang",
   "Back to Home": "Kembali ke Halaman Utama",
   "Back to Login": "Kembali ke Halaman Login",
+  "Open Customer View": "Buka Tampilan untuk Pelanggan",
   "Logout": "Logout",
   "Login": "Login",
   "Create": "Tambah",
