feat: client improvements and docs update

--- a/client/src/services/lang/resources/id.json
+++ b/client/src/services/lang/resources/id.json
@@ -101,6 +101,7 @@
   "sale": "penjualan",
   "Sale": "Penjualan",
   "Customer Order View": "Tampilan Pesanan Pelanggan",
+  "Order Number": "Nomor Pesanan",
   "Sale Price": "Harga Jual",
   "sales": "penjualan",
   "Sales": "Penjualan",
